<resources>
    <string name="add">Add</string>
    <string name="add_cat">Add Category</string>
    <string name="add_expense">Add Expense</string>
    <string name="add_note">Add a Note</string>
    <string name="amount">Amount</string>
    <string name="app_name">BudgetBuddy</string>
    <string name="budget">Budget</string>
    <string name="budget_progress">Budget Progress</string>
    <string name="br_symbol">£</string>
    <string name="cancel">Cancel</string>
    <string name="cat_name">Category Name</string>
    <string name="category">Category</string>
    <string name="choose_color">Choose a color, options "blue", "red", "green", "yellow", "purple", "orange"</string>
    <string name="choose_icon">Choose an Icon like "🎩", "☂️", "🌳"</string>
    <string name="contd">Continue</string>
    <string name="continuee">Continue</string>
    <string name="create_budget">Create Budget</string>
    <string name="current_balance">Current Balance</string>
    <string name="dollar_symbol">$</string>
    <string name="electricity">Electricity</string>
    <string name="empty_budget_amount">Please enter a budget amount</string>
    <string name="empty_cat_prompt">Please select a category</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="entertainment">Entertainment</string>
    <string name="euro">€</string>
    <string name="eur_symbol">€</string>
    <string name="exp_saved">Expense Saved!</string>
    <string name="expenses">Expenses</string>
    <string name="fire">🔥</string>
    <string name="food">Food</string>
    <string name="fun">Fun</string>
    <string name="get_ai_recommendation">"🤖  Get AI Recommendation"</string>
    <string name="health">Health</string>
    <string name="home">Home</string>
    <string name="income">Income</string>
    <string name="invalid_amount_prompt">Please enter a valid amount</string>
    <string name="last_2wks">Last 2 Weeks</string>
    <string name="letsgo">let\'s go!</string>
    <string name="loading">Loading</string>
    <string name="log_xpense">Log an expense to start your streak.</string>
    <string name="my_finances">My Finances</string>
    <string name="nonpos_amount_prompt">Amount must be greater than 0</string>
    <string name="not_set">Not set</string>
    <string name="number">12345</string>
    <string name="other">Other</string>
    <string name="overview">Overview</string>
    <string name="percentage_example">105%</string>
    <string name="placeholder">PlAceHoLdEr</string>
    <string name="recent_expenses">Recent Expenses</string>
    <string name="save_budget">Save Budget</string>
    <string name="save_expense">Save Expense</string>
    <string name="school">School</string>
    <string name="see_all">See All</string>
    <string name="select_category">Select Category</string>
    <string name="settings">Settings</string>
    <string name="set_budget_amount">Set Update Amount</string>
    <string name="shopping">Shopping</string>
    <string name="spending_breakdown">Spending Breakdown</string>
    <string name="spending_chart">Spending Chart</string>
    <string name="total_spent">Total Spent</string>
    <string name="transport">Transport</string>
    <string name="val_not_set">Not set</string>
    <string name="yen_symbol">¥</string>
    <string name="you_stayed_in_budget">You stayed in budget within 3 months in a row!</string>
    <string name="no_budgets_set_for_this_period">No budgets set for this period.</string>
</resources>
